export class Domcontroller {
  constructor() {}
}
