export class Gameboard {
  constructor(player) {
    this.player = player;
  }
}
