export class Gamecontroller {
  constructor() {}
}
